--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #6b3ebe;
 }
 
 .cabecalho{
@@ -11,7 +12,10 @@
 }
 
 .cabecalho img {
-    width: 300px;
+    width: 400px;
+    border-radius: 30px;
+    border-style: solid;
+    border-color: white;
 }
 
 .cabecalho h1{
@@ -25,11 +29,13 @@
 
 .cabecalho h4 {
     font-size: 35px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .texto{
     background-color: white;
-    color: #6b3ebe;
+    color: white;
     text-align: center;
 }
 
@@ -94,3 +100,19 @@ button:hover{
     margin: 0;
 }
 
+.proxima {
+    margin: 20px;
+}
+
+.perguntas {
+    display: none;
+    background-color: #6b3ebe;    
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+html,  body  {
+    height: 100%;
+}
