--- a/style.css
+++ b/style.css
@@ -20,15 +20,23 @@
 
 .cabecalho h1{
     padding: 50px 50px 5px 50px;
-    font-size: 80px;
-}
-
-.cabecalho h3 {
     font-size: 50px;
 }
 
+#acertos {
+    padding: 5px 50px 5px 50px;
+}
+
+#numAcertos {
+    padding: 5px 50px 5px 50px;
+}
+
+.cabecalho h3 {
+    font-size: 30px;
+}
+
 .cabecalho h4 {
-    font-size: 35px;
+    font-size: 23px;
     margin-left: 20px;
     margin-right: 20px;
 }
@@ -40,12 +48,12 @@
 }
 
 .texto p{
-    font-size: 35px;
-    padding: 40px;
+    font-size: 25px;
+    padding: 10px 40px 40px 40px;
 }
 
 .texto h2{
-    font-size: 40px;
+    font-size: 30px;
     padding-right: 15px;
     padding-left: 15px;
 }
@@ -58,7 +66,7 @@
 button{
     color: white;
     background-color: #6b3ebe;
-    font-size: 50px;
+    font-size: 30px;
     border-style: outset ;
     padding: 5px;
     border-radius: 10px;
@@ -72,7 +80,7 @@ button:hover{
 }
 
 .alternativas button{
-    margin-top: 10px;
+    margin-top: 7px;
 }
 
 .alternativas {
@@ -91,7 +99,7 @@ button:hover{
 #tentarNovamente button {
     color: white;
     background-color: #6b3ebe;
-    font-size: 25px;
+    font-size: 15px;
     border-style: outset;
     padding: 5px;
     border-radius: 10px;
@@ -115,4 +123,12 @@ button:hover{
 
 html,  body  {
     height: 100%;
+}
+
+.menorh {
+    height: 200px;
+}
+
+#pixarLogo {
+    width: 300px;
 }
