--- a/style.css
+++ b/style.css
@@ -42,14 +42,14 @@
 }
 
 .texto{
-    background-color: white;
+    background-color: #6b3ebe;
     color: white;
     text-align: center;
 }
 
 .texto p{
     font-size: 25px;
-    padding: 10px 40px 40px 40px;
+    padding: 10px 40px 5px 40px;
 }
 
 .texto h2{
@@ -58,9 +58,9 @@
     padding-left: 15px;
 }
 
-#botao{
+.botao{
     text-align: center;
-    padding: 40px;
+    padding: 10px 40px 5px 40px;
 }
 
 button{
@@ -131,4 +131,23 @@ html,  body  {
 
 #pixarLogo {
     width: 300px;
+}
+
+.botoes {
+    display: grid;
+}
+
+#instru {
+    width: 500px;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#creditos {
+    width: 800px;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+    text-decoration: none;
 }
